[tool.poetry]
name = "bayespub"
version = "0.1.0"
description = "Using LLMs to infer trends in Bayesian analysis in academic literature"
authors = ["Robert Turnbull"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "=2.0.0"
transformers = "^4.31.0"
accelerate = "^0.24.1"
einops = "^0.7.0"
langchain = ">=0.0.329"
bitsandbytes = "^0.41.1"
scipy = "^1.11.3"
numexpr = "^2.8.7"
typer = "^0.9.0"
openai = "^1.3.0"
langserve = {extras = ["all"], version = "^0.0.27"}
uvicorn = "^0.24.0.post1"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
rich = "^13.7.0"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.17"
lark = "^1.1.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bayespub = "bayespub.main:app"
